# experiments

./: .gitignore
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/experiments/: main
catkin_ws/devel/lib/ft_ros/: ft_main  get_wrench_data
catkin_ws/devel/lib/pkgconfig/: experiments.pc  ft_ros.pc  ur16e_ros.pc
catkin_ws/devel/lib/ur16e_ros/: controller  receiver
catkin_ws/devel/share/experiments/cmake/: experimentsConfig.cmake
catkin_ws/devel/share/ft_ros/cmake/: ft_rosConfig.cmake
catkin_ws/devel/share/ur16e_ros/cmake/: ur16e_rosConfig.cmake
catkin_ws/src/experiments/: CMakeLists.txt  package.xml
catkin_ws/src/experiments/include/AdmittanceControl/: AdmittanceControl.h
catkin_ws/src/experiments/src/: AdmittanceControl.cpp  admittance_control_main.cpp
catkin_ws/src/ft_ros/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/ft_ros/include/ft_transfrom/: ft_tool.h
catkin_ws/src/ft_ros/launch/: ft_bringup.launch
catkin_ws/src/ft_ros/src/: ft_main.cpp  ft_tool.cpp
catkin_ws/src/ft_ros/test/: compensated_wrench_data.cpp
catkin_ws/src/ur16e_ros/: CMakeLists.txt  README.md
catkin_ws/src/ur16e_ros/launch/: ur16e_bringup.launch
catkin_ws/src/ur16e_ros/src/: controller.cpp  receiver.cpp
